fetch result data during webhook

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Concept2 Logbook Discord Integration</title>
+    <title>RowBot</title>
     <style>
         body {
             margin: 0;
@@ -41,7 +41,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Concept2 Logbook Discord Integration</h1>
+        <h1>RowBot</h1>
+        <p style="{{descriptionStyle}}">After logging in, your results should start to appear in the configured discord channel</p>
         <button class="login-button {{buttonClass}}" onclick="{{buttonAction}}">
             {{buttonText}}
         </button>
