--- a/templates/success.html
+++ b/templates/success.html
@@ -40,8 +40,7 @@
 <body>
     <div class="container">
         <div class="success">✓ Successfully connected to Concept2 Logbook!</div>
-        <p>You can now close this tab or return to the main page.</p>
-        <a href="/" class="back-button">Return to Main Page</a>
+        <p>You can now close this tab.</p>
     </div>
 </body>
 </html>
