use attached generated image instead of a discord embed

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RowBot</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚣</text></svg>">
     <style>
         body {
             margin: 0;
@@ -42,7 +43,7 @@
 <body>
     <div class="container">
         <h1>RowBot</h1>
-        <p style="{{descriptionStyle}}">After logging in, your results should start to appear in the configured discord channel</p>
+        <p style="{{descriptionStyle}}">Log in to receive activity data in the configured discord channel</p>
         <button class="login-button {{buttonClass}}" onclick="{{buttonAction}}">
             {{buttonText}}
         </button>
